--- a/1.ipynb
+++ b/1.ipynb
@@ -2,23 +2,42 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "pycharm": {
-     "is_executing": true,
      "name": "#%%\n"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "6\n"
+     ]
+    }
+   ],
    "source": [
     "o = 6\n",
     "o += 8\n",
     "o = 6\n",
     "print(o)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
+  "celltoolbar": "附件",
   "kernelspec": {
    "display_name": "Python 3 (ipykernel)",
    "language": "python",
